--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,15 @@
 body {
   background-color: #fdf6e3;
 }
+
 header, footer {
   font-size: 1.5rem;
 }
-ul > nav {
+
+nav ul li {
 font-family: sans-serif;
+}
+
+h1 {
+  text-transform: uppercase;
 }
