--- a/css/main.css
+++ b/css/main.css
@@ -40,3 +40,11 @@ background-color: #2694d8;
 #first {
   background-color: #719e47;
 }
+
+.odd {
+  background-color: #657ba3;
+}
+
+.even {
+  background-color: #586e75;
+}
