--- a/css/main.css
+++ b/css/main.css
@@ -7,14 +7,14 @@ header, footer {
 }
 
 nav ul li {
-font-family: sans-serif;
+  font-family: sans-serif;
 }
 
 h1 {
   text-transform: uppercase;
 }
 
-main  {
+main {
   background-color: #eee8d5;
 }
 
@@ -35,20 +35,33 @@ h2 {
 }
 
 [href^="http://en.wikipedia.org/wiki/Fruit"] {
-background-color: #2694d8;
+  background-color: #2694d8;
 }
+
 #first {
   background-color: #719e47;
 }
 
-.odd {
+.types li:nth-child(odd) {
   background-color: #657ba3;
 }
 
-.even {
+.types li:nth-child(even) {
   background-color: #586e75;
 }
 
-.third {
+.types li:nth-child(3) {
+  background-color: #d04b16;
+}
+
+.types li:nth-child(6) {
+  background-color: #d04b16;
+}
+
+.types li:nth-child(9) {
+  background-color: #d04b16;
+}
+
+.types li:nth-child(12) {
   background-color: #d04b16;
 }
