--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,9 @@ h2 {
   background-color: #719e47;
 }
 
-ol li:third-child #2aa198;
+ol li:nth-child(3) {
+  color: #2aa198;
+  }
 
 .types li:nth-child(odd) {
   background-color: #657ba3;
